syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.quarkus.grpc";
option java_outer_classname = "GreetingProto";

package greeting;

service ClientGreeter {
    rpc GreetClient(GreeterRequest) returns (GreeterResponse){}
}

message GreeterRequest {
    string client_name = 1;
}

message GreeterResponse {
    string message = 1;
}